# dash-bootstrap-templates

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _create_templates.py  dash_bootstrap_templates.py  dbc.css  demo_app.py  demo_minty.py  demo_quickstart.py  demo_sketchy.py  demo_superhero.py  dl_demo_4figures.py  pyproject.toml  setup.cfg  testing_AIO_Switch.py
.github/workflows/: python-package.yml  release.yml
examples/: color_mode.py  demo_4_graphs.py  demo_quickstart.py  demo_template_all.py  demo_template_vs_default.py  demo_theme_change_4_graphs.py  demo_theme_changer_all.py  demo_toggle.py  demo_toggle_icons.py  demo_vizro_bootstrap.py  dl_demo_4figures.py  sample_app.py  testing_AIO_Switch.py  theme_switcher.py  theme_switcher_v1.py
examples/assets/: dbc.css  testing_light.css
examples/demo_local_stylesheets/: README.md  app.py
examples/demo_local_stylesheets_ThemeSwitchAIO/: README.md  app.py
examples/demo_local_stylesheets_ThemeSwitchAIO/assets/: theme1.css  theme2.css
examples/demo_new_switch/: demo_new_switch.py
examples/demo_new_switch/assets/: custom_color_mode_theme.css  dbc.css
examples/demo_new_switch/server_side_assets/: dbc.css
examples/demo_new_theme_changer/: demo_new_theme_changer.py
examples/demo_new_theme_changer/server_side_assets/: custom_dark_theme.css  custom_light_theme.css
examples/testing_AIO_Switch/: testing_AIO_Switch.py
examples/testing_AIO_Switch/assets/: testing_dark.css  testing_light.css
src/aio/: __init__.py  aio_theme_changer.py  aio_theme_switch.py  clientsideCallbacks.js
src/dash_bootstrap_templates/: __init__.py
src/dash_bootstrap_templates/templates/: bootstrap.json  bootstrap_dark.json  cerulean.json  cerulean_dark.json  cosmo.json  cosmo_dark.json  cyborg.json  cyborg_dark.json  darkly.json  darkly_dark.json  flatly.json  flatly_dark.json  journal.json  journal_dark.json  litera.json  litera_dark.json  (+36 more)
templates/: bootstrap.json  cerulean.json  cosmo.json  cyborg.json  darkly.json  flatly.json  journal.json  litera.json  lumen.json  lux.json  materia.json  minty.json  pulse.json  sandstone.json  simplex.json  sketchy.json  slate.json  solar.json  spacelab.json  superhero.json  united.json  yeti.json
